<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/bluetoothIv"
        android:src="@drawable/ic_bluetooth_on"
        android:contentDescription="@string/bluetooth_image" />

    <Button
        android:id="@+id/turnOnButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_off"/>

    <Button
        android:id="@+id/btnDiscoverable_on_off"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:text="@string/discoverable"/>

    <Button
        android:id="@+id/btnFindUnpairedDevices"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:text="@string/discover"/>

    <Button
        android:id="@+id/btnStartConnection"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:text="@string/start_connection"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/lvNewDevices"/>





</LinearLayout>